--- a/plugin/style_utama.css
+++ b/plugin/style_utama.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url('./image/_DSC2016.jpg'); 
+	background-image: url('plugin/image/_DSC2016.jpg'); 
 	background-size: cover;
 	background-repeat: no-repeat;	
 	padding: 0;
