--- a/plugin/css/bootstrap.css
+++ b/plugin/css/bootstrap.css
@@ -66,7 +66,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-image: url(../image/_DSC2016.jpg);
+  background-image: url(../../plugin/image/_DSC2016.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
